feat : cwmAi-v2 서비스 안정화 및 성능 개선 (#2) - JWT 고정키, 동시성 제어(스냅샷), Tabula 표 추출, 시맨틱 캐싱